--- a/portfolio/.gitignore
+++ b/portfolio/.gitignore
@@ -6,7 +6,9 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+*.netlify
+.netlify
+netlify
 node_modules
 dist
 dist-ssr
@@ -22,3 +24,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+
